[package]
name = "duplihere"
version = "0.9.2"
authors = ["Tony Asleson <tony.asleson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rags-rs = "0.1.4"
glob = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
lazy_static = "1.4.0"
rayon = "1.3.0"
dashmap = { version = "5.3.4", features = ["raw-api"] }
